@@ -75,6 +75,10 @@ AMI
  * New AMI actions PRIDebugSet, PRIDebugFileSet, and PRIDebugFileUnset
    enable manager control over PRI debugging levels and file output.
 
+ * AMI action PJSIPNotify may now send to a URI instead of only to a PJSIP
+   endpoint as long as a default outbound endpoint is set. This also applies
+   to the equivalent CLI command (pjsip send notify)
+
 cdr_sqlite
 -----------------
  * This module was deprecated and has been removed. Users of cdr_sqlite
